test/core/errors/identifiers_error/zs/clashing_identifiers/const_const_name_conflict_error.zs
package clashing_identifiers.const_const_name_conflict_error;

const int32 Test = 13;
const string Test = "test"; // Test is already defined!
